@@ -332,3 +332,4 @@ Revision	Version Updated		Log Message
 309		C++			Massive overhaul of DW pop conversion.
 310		C++			Better logging of EU3 type check errors.
 311		C++			Culture rating increases prestige.
+312		C++			Army and Navy tradition give leadership.
